<resources>
    <string name="app_name">Second Screen</string>
    <string name="title_activity_options">Second Screen</string>

    <string name="sound_toggle">Sound Toggle</string>
    <string name="wifi_toggle">WiFi Toggle</string>
    <string name="flash_toggle">Flashlight Toggle</string>
    <string name="bt_toggle">Bluetooth Toggle</string>
    <string name="airplane_toggle">Airplane Mode Toggle</string>
    <string name="music_back">Skip Back</string>
    <string name="music_pp">Play/Pause</string>
    <string name="music_forward">Skip Forward</string>
    <string name="music_text">Song Title</string>
    <string name="notifications_color">Notification Icons</string>
    <string name="wifi_color">WiFi Icon</string>
    <string name="mobile_color">Mobile Icon</string>
    <string name="airplane_color">Airplane Mode Icon</string>
    <string name="battery_color">Battery Info</string>
    <string name="clock_color">Clock</string>
    <string name="ss_background">Background</string>

    <string name="app_key">App_Key</string>
    <string name="contact_key">Contact Key</string>
    <string name="def_key">Def_Key</string>

    <string name="color">Color</string>
    <string name="page_order">Page Order</string>
    <string name="toggle_order">Toggle Order</string>
    <string name="options">Options</string>
    <string name="unknown">Unknown</string>

    <string name="color_desc">Color all the things!</string>
    <string name="page_order_desc">Set the order of the pages.</string>
    <string name="toggle_order_desc">Set the order of the QuickToggles.</string>
    <string name="options_desc">Miscellaneous options.</string>

    <string name="general">General</string>
    <string name="information">Information Screen</string>
    <string name="toggles">Toggles Screen</string>
    <string name="music">Music Screen</string>
    <string name="recents">Recents Screen</string>
    <string name="contacts">Contacts Screen</string>
    <string name="launcher">Launcher Screen</string>

    <string name="play_something">Play Something!</string>
</resources>
