<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <header
        android:fragment="xyz.mustardcorp.secondscreen.OptionsActivity$ColorPreferenceFragment"
        android:title="@string/color"
        android:summary="@string/color_desc"/>

    <header
        android:fragment="xyz.mustardcorp.secondscreen.OptionsActivity$PageOrderPreferenceFragment"
        android:title="@string/page_order"
        android:summary="@string/page_order_desc"/>

    <header
        android:fragment="xyz.mustardcorp.secondscreen.OptionsActivity$ToggleOrderPreferenceFragment"
        android:title="@string/toggle_order"
        android:summary="@string/toggle_order_desc"/>

    <header
        android:fragment="xyz.mustardcorp.secondscreen.OptionsActivity$OtherPreferenceFragment"
        android:title="@string/options"
        android:summary="@string/options_desc"/>

</preference-headers>
