<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <com.jaredrummler.android.colorpicker.ColorPreference
        android:title="@string/sound_toggle"
        android:key="sound_color" />

    <com.jaredrummler.android.colorpicker.ColorPreference
        android:title="@string/wifi_toggle"
        android:key="wifi_color" />

    <com.jaredrummler.android.colorpicker.ColorPreference
        android:title="@string/flash_toggle"
        android:key="flash_color" />

    <com.jaredrummler.android.colorpicker.ColorPreference
        android:title="@string/bt_toggle"
        android:key="bt_color" />

    <com.jaredrummler.android.colorpicker.ColorPreference
        android:title="@string/music_back"
        android:key="skip_prev_color" />

    <com.jaredrummler.android.colorpicker.ColorPreference
        android:title="@string/music_pp"
        android:key="play_pause_color" />

    <com.jaredrummler.android.colorpicker.ColorPreference
        android:title="@string/music_forward"
        android:key="skip_forward_color" />

    <com.jaredrummler.android.colorpicker.ColorPreference
        android:title="@string/music_text"
        android:key="song_info_color" />

    <com.jaredrummler.android.colorpicker.ColorPreference
        android:title="@string/ss_background"
        android:key="ss_color" />

</PreferenceScreen>